--- a/templates/css.tmpl
+++ b/templates/css.tmpl
@@ -1,7 +1,7 @@
 ${1:@charset "${2:UTF-8}";}
 /**
  * ${3:}
- * @authors ${author} (${email})
+ * @author ${author} <${email}>
  * @date    ${date}
  * @version \$Id\$
  */
