--- a/templates/php.tmpl
+++ b/templates/php.tmpl
@@ -1,7 +1,7 @@
 <?php
 /**
  * ${1:}
- * @authors ${author} (${email})
+ * @author ${author} <${email}>
  * @date    ${date}
  * @version \$Id\$
  */
