--- a/templates/python.tmpl
+++ b/templates/python.tmpl
@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
 # @Date    : ${date}
-# @Author  : ${author} (${email})
+# @Author  : ${author} <${email}>
 # @Link    : ${link}
 # @Version : \$Id\$
 
